# coherent-lasers

./: .gitignore  MANIFEST.ini  README.md  pyproject.toml
.github/workflows/: tag_and_publish.yml
doc_template/source/: conf.py
src/coherent_lasers/: __init__.py
src/coherent_lasers/app/: cli.py  server.py
src/coherent_lasers/app/frontend/: __init__.py
src/coherent_lasers/common/hops/: .gitignore  README.md  __init__.py  device.py  hops.py  hops_device.py  main.py  manager.py
src/coherent_lasers/common/hops/dll/: CohrFTCI2C.h  CohrFTCI2C.lib  CohrHOPS.h  CohrHOPS.lib
src/coherent_lasers/genesis_mx/: README.md  __init__.py  app.py  base.py  commands.py  driver.py  genesis_mx.py  genesis_mx_voxel.py  mock.py  voxel.py  voxel_adapter.py
src/coherent_lasers/genesis_mx/hops/: .gitignore  __init__.py  cohrhops.py
src/coherent_lasers/hops/: __init__.py  app.py  lib.py
tests/: script.py  simple_cli.py  test_genesis_mx_voxel.py
tests/genesis_mx/: test_genesis_mx.py  test_genesis_mx_voxel.py
tests/hops/: integration.py  low_level.py  new.py  simple.py
webgui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
webgui/src/: App.svelte  laser.svelte.ts  powerChart.svelte.ts  types.ts
webgui/src/lib/: constants.ts
webgui/src/lib/components/: DeliminatedInput.svelte
webgui/src/lib/messaging/: eventBus.ts  socket.ts
webgui/src/styles/: app.scss  colors.scss  resets.scss  typography.scss
