[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coherent_lasers"
description = "A python package for controlling coherent lasers"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3.10"]
readme = "README.md"
keywords = ["laser", "coherent", "drivers", "hardware control"]
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
voxel = ["voxel @ git+https://github.com/AllenNeuralDynamics/voxel.git"]
dev = [
    'pytest',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
]

[project.scripts]
genesis-mx = "coherent_lasers.genesis_mx.app:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
py-modules = []

[tool.setuptools.package-data]
"coherent_lasers.common.hops" = ["CohrFTCI2C.dll", "CohrHOPS.dll"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coherent_lasers*"]
namespaces = false


[tool.setuptools.dynamic]
version = { attr = "coherent_lasers.__version__" }

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | build
      | dist
    )/
    | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["src", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail_under = 100
