[project]
name = "coherent_lasers"
version =  "0.2.0"
description = "A python package for controlling coherent lasers"
license = { text = "MIT" }
requires-python = ">=3.10, < 3.12"
authors = [
    { name = "Walter Mwaniki", email = "walter.mwaniki@alleninstitute.org" },
]
classifiers = ["Programming Language :: Python :: 3.10"]
readme = "README.md"
keywords = ["laser", "coherent", "drivers", "hardware control"]

[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

dependencies = []

[project.optional-dependencies]
gui = ["fastapi[standard]", "uvicorn", "click>=8.1.7"]
dev = [
    'pytest',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
]
build = ["setuptools>=42", "setuptools-scm"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
py-modules = []

[project.scripts]
genesis-mx = "coherent_lasers.app.server:run"
genesis-mx-cli = "coherent_lasers.app.cli:cli"

[tool.setuptools.package-data]
"coherent_lasers.genesis_mx.hops" = ["CohrFTCI2C.dll", "CohrHOPS.dll"]
"coherent_lasers.app.frontend" = ["build/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coherent_lasers*"]
# exclude = ["tests*, docs*, webgui*, dist*, frontend*, build*"]
namespaces = false

[tool.ruff]
line-length = 120
show-fixes = true

target-version = "py311"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".gitignore",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "sdk",
]

[tool.ruff.lint]
extend-select = ["C4", "SIM", "TCH"]
fixable = ["ALL"]

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
(
    /(
        \.eggs         # exclude a few common directories in the
      | \.git          # root of the project
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | build
      | dist
    )/
    | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["src", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover",
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail_under = 100
